# card

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  ROADMAP.md  codemeta.json  pyproject.toml
.github/workflows/: tests.yml
docs/: CARDS.md  index.md
docs/dev/: API.md  AUDIT_FICHES.md  CHANTIERS.md  NOMENCLATURE.md  ORIGINE_R.md  Oberlin_1994ITCEMAGREF_1-8_edit.md  PLAN_nettoyage.md  RENAMING.md  ROADMAP.md  TOPICS.md  VALIDATION_R.md  migration_classification.md
docs/dev/archive/: AUDIT_FICHES.md  ROADMAP.md
scripts/: generate_catalog.py  set_version.py
src/card/: __init__.py  extraction.py  inputs.yaml  loader.py  management.py  render.py  schema.py  suffix.py  topics.yaml  trend.py
src/card/cards/Evapotranspiration/: ETPA.yaml  ETPA.yaml~
src/card/cards/Flow/Performance/: Bias.yaml  Bias_season.yaml  KGE.yaml  KGEsqrt.yaml  NSE.yaml  NSEinv.yaml  NSElog.yaml  NSEsqrt.yaml  STD.yaml  STD_ratio.yaml
src/card/cards/Precipitations/: CR.yaml  CRS_season.yaml  RA.yaml  RA_all.yaml  RA_ratio.yaml  RAl.yaml  RAl_ratio.yaml  RAs.yaml  RAs_ratio.yaml  RCXA1.yaml  RCXA5.yaml  RMA_month.yaml  RMAl_month.yaml  RMAs_month.yaml  RSA_season.yaml  RSAl_season.yaml  RSAs_season.yaml  dtCDDA.yaml  dtCDDMA_month.yaml  dtCDDSA_season.yaml  dtCWDA.yaml  dtCWDMA_month.yaml  dtCWDSA_season.yaml  dtRA01mm.yaml  dtRA20mm.yaml  dtRA50mm.yaml  dtRMA01mm_month.yaml  dtRMA20mm_month.yaml  dtRMA50mm_month.yaml  dtRSA01mm_season.yaml  dtRSA20mm_season.yaml  dtRSA50mm_season.yaml  mean-RA.yaml  mean-RSA_season.yaml
src/card/cards/Sensitivity_to_Climate_Variability/: QR_ratio.yaml  RAT_ET0.yaml  RAT_R.yaml  RAT_T.yaml  Rc.yaml  epsilon_R.yaml  epsilon_R_season.yaml  epsilon_T.yaml  epsilon_T_season.yaml
src/card/cards/Temperature/: TA.yaml  TMA_month.yaml  TSA_season.yaml  mean-TA.yaml  mean-TSA_season.yaml
src/card/cards/evapotranspiration/series/: ETPA.yaml  ETPMA_month.yaml  ETPSA_season.yaml
src/card/cards/flow/curve/: BFM.yaml  FDC.yaml  FDC_H.yaml  FDC_H0.yaml  FDC_H1.yaml  FDC_H2.yaml  FDC_H3.yaml  QJC10.yaml  QJDC10.yaml  QJDC5.yaml  median-QJ.yaml  median-QJC5.yaml  median-QJ_H.yaml  median-QJ_H0.yaml  median-QJ_H1.yaml  median-QJ_H2.yaml  median-QJ_H3.yaml
src/card/cards/flow/scalar/: BF-LH.yaml  BFI-LH.yaml  BFI-Wal.yaml  BFM.yaml  Bias.yaml  Bias_season.yaml  KGE.yaml  KGEsqrt.yaml  NSE.yaml  NSEinv.yaml  NSElog.yaml  Q10.yaml  Q50.yaml  Q90.yaml  QJXA-10.yaml  QMNA-5.yaml  QR_ratio.yaml  RAT_ET0.yaml  RAT_R.yaml  STD_ratio.yaml  VCN10-5.yaml  VCN30-2.yaml  alpha-QA.yaml  alpha-QJXA.yaml  alpha-VCN10.yaml  delta-BFI-LH_H.yaml  delta-BFI-Wal_H.yaml  delta-Q01A_H.yaml  delta-Q05A_H.yaml  delta-Q10A_H.yaml  delta-Q25A_H.yaml  delta-Q50A_H.yaml  delta-Q75A_H.yaml  delta-Q90A_H.yaml  delta-Q95A_H.yaml  delta-Q99A_H.yaml  delta-QA_H.yaml  delta-QJXA-10_H.yaml  delta-QJXA_H.yaml  delta-QMA_month_H.yaml  (+67 more)
src/card/cards/flow/series/: Bias_season.yaml  Q01A.yaml  Q05A.yaml  Q10A.yaml  Q25A.yaml  Q50A.yaml  Q75A.yaml  Q90A.yaml  Q95A.yaml  Q99A.yaml  QA.yaml  QM.yaml  QMNA_summer.yaml  QMNA_winter.yaml  QM_H.yaml  QM_H0.yaml  QM_H1.yaml  QM_H2.yaml  QM_H3.yaml  QNA.yaml  QNA_winter.yaml  QSA_JJASO.yaml  QSA_season.yaml  VCN10.yaml  VCN10_summer.yaml  VCN30_winter.yaml  VCN3_summer.yaml  VCN3_winter.yaml  allLF.yaml  allLF_summer.yaml  allLF_winter.yaml  centerBF.yaml  centerLF.yaml  centerLF_summer.yaml  centerLF_winter.yaml  dtFlood.yaml  dtLF.yaml  dtLF_summer.yaml  endBF.yaml  endLF.yaml  (+15 more)
src/card/cards/precipitation/scalar/: CR.yaml  CRS_season.yaml  RA_ratio.yaml  mean-RA.yaml  mean-RMA_month.yaml  mean-RSA_season.yaml
src/card/functions/: __init__.py  aggregation.py  baseflow.py  climate.py  fdc.py  performance.py  period.py  return_period.py  seasonal.py  threshold.py  trend.py
tests/: conftest.py  make_test_data.py  run_R_corpus.R  run_py_corpus.py  test_extraction_integration.py  test_functions.py  test_gap_robustness.py  test_lint.py  test_loader.py  test_management.py  test_packaging.py  test_period.py  test_render.py  test_sampling_override.py  test_suffix.py  test_trend.py  test_ux.py  validate_R.R  validate_py.py
tests/data/: known_divergences.yaml
tests/data/py_golden/: delta-QNA_H.csv  delta-QNA_summer_H.csv  delta-QNA_winter_H.csv  delta-VCN10_summer_H.csv  delta-VCN30_summer_H.csv  delta-VCN3_winter_H.csv  delta-allLF_H.csv  delta-allLF_summer_H.csv  delta-allLF_winter_H.csv  delta-dtBF_H.csv  delta-dtFlood_H.csv  delta-tVCN10_summer_H.csv
(+341 files in other folders)
