[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "card-stase"
version = "0.1.0"
description = "CARD : hydroclimatic variable extraction from YAML parameterization files, powered by exstat"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Louis Héraut", email = "louis.heraut@inrae.fr"}]
maintainers = [{name = "Louis Héraut", email = "louis.heraut@inrae.fr"}]
requires-python = ">=3.10"
dependencies = [
    # 0.4.0 : suffixes résolus référence par référence (sans quoi les
    # fiches rp-* multi-seuils seraient silencieusement fausses) et
    # process_trend sans meta=, avec extremes_pool_suffixes.
    "stase>=0.4.0",
    "numpy",
    "pandas>=2.0",
    "PyYAML",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/lou-heraut/card"
Issues = "https://github.com/lou-heraut/card/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# inputs.yaml et topics.yaml vivent à la racine du package : sans le
# second motif ils manquent en installation non éditable (image Docker),
# et card.info() casse sur le registre des entrées.
card = ["cards/**/*.yaml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::RuntimeWarning", "ignore::FutureWarning", "ignore::UserWarning"]
