[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "card-stase"
version = "0.2.0"
description = "CARD : hydroclimatic variable extraction from YAML parameterization files, powered by exstat"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Louis Héraut", email = "louis.heraut@inrae.fr"}]
maintainers = [{name = "Louis Héraut", email = "louis.heraut@inrae.fr"}]
requires-python = ">=3.10"
dependencies = [
    # 0.5.0 : rôle param_cols, sans lequel les fiches _H ne peuvent pas
    # recevoir leurs bornes d'horizon en colonnes d'entrée. Inclut aussi
    # 0.4.0 : suffixes résolus référence par référence (sans quoi les
    # fiches rp-* multi-seuils seraient silencieusement fausses) et
    # process_trend sans meta=.
    "stase>=0.5.0",
    "numpy",
    "pandas>=2.0",
    "PyYAML",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/lou-heraut/card"
Issues = "https://github.com/lou-heraut/card/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# inputs.yaml et topics.yaml vivent à la racine du package : sans le
# second motif ils manquent en installation non éditable (image Docker),
# et card.info() casse sur le registre des entrées.
card = ["cards/**/*.yaml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::RuntimeWarning", "ignore::FutureWarning", "ignore::UserWarning"]

[tool.ruff]
# Fige le jeu de règles. Sans cette section, `ruff check` applique les
# défauts de la VERSION installée ; or le CI fait `pip install ruff` (non
# épinglé) et prend la dernière, dont les défauts s'élargissent au fil des
# versions. Résultat : le lint passe en local et casse en CI (mails
# d'échec à répétition). On déclare donc explicitement les règles, pour
# que « passe en local » implique « passe en CI » quelle que soit la
# version. Élargir ce jeu (imports triés, etc.) est une décision à part.
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
